# ampav-gliner

./: .gitignore  README.md  pyproject.toml
ampav/gliner/: __init__.py  _version.py  entities.py
ampav_gliner_cli/: __init__.py  entities.py
ampav_gliner_pipeline/: __init__.py  entities.py
examples/: gliner_text_example.py  gliner_transcript_example.py
tests/: test_cli.py  test_entities.py  test_pipeline.py
