[project]
name = "ampav-gliner"
version = "0.0.2"
description = "GLiNER tooling for the AMPAV environment"
readme = "README.md"
license = "Apache-2.0"
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
]
authors = [
    {name = "Ying Feng", email = "yingfeng@iu.edu"},
]

requires-python = ">=3.12"
dependencies = [
    "ampav-core>=0.0.17",
    "gliner==0.2.26",
]

[project.urls]
Homepage = "https://github.com/AMPAV/ampav-gliner"
Repository = "https://github.com/AMPAV/ampav-gliner.git"
Issues = "https://github.com/AMPAV/ampav-gliner/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["ampav*"]
namespaces = true

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
